--- a/index.html
+++ b/index.html
@@ -63,10 +63,24 @@
             <div class="page-2">
                 <div class="yellow-band">
                     <ol>
-                        <li>ELEMENT</li>
-                        <LI>DIGITAL SOLUTION</LI>
-                        <LI></LI>
+                        <li></li>
+                        <LI>DIGITAL</LI>
+                        <LI>SOLUTION</LI>
+                        <LI>STRATEGY</LI>
+                        <LI>BRANDING</LI>
+                        <LI>AGENCY</LI>
+                        <LI>INTERATION</LI>
+                        <LI>DEVELOPEMENT</LI>
+                        <LI>TYPOGRAPHY</LI>
+                        <LI>STUDIO</LI>
                     </ol>
+                </div>
+                <div class="page-2-content">
+                    <h1>We unlock the potentioal of <br> your business with creative <br>design</h1>
+                    <img src="img3.jpg" alt="" class="page-2-content-img">
+                    <p>From traditional PR and thought leadership campaigns <br> to storytelling and creative social media management <br> we’ve got you covered. Something is not your average <br> order-taking vendor. We are proud to be the go-to <br> partner for some of the world’s biggest agencies and <br> brands because they trust our expertise</p>
+                    <button>Explore Us <i class="fa-solid fa-arrow-right"></i></button>
+                    <img src="img2.jpg" alt="" class="page-2-content-img2">
                 </div>
             </div>
         </div>
