--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="responsive-nav">
             <div class="menu-responsive">
                 <div>
-                    <img src="footer-logo-white(t).png" alt="">
+                    <img src="footer-logo-white(t).png" alt=""  width="120px">
                 </div>
                 <div>
                     <i class="fa-solid fa-bars" id="open-opti-menu"  onclick="openoptimenu()"></i>
